Fixed project-list spacing on mobile

--- a/components/project-list/project-list.module.css
+++ b/components/project-list/project-list.module.css
@@ -45,8 +45,8 @@
 
 @media screen and (max-width: 499px) {
 
-	.project-list .project-item + .project-item {
-		margin-top: 6%;
+	.project-list .project-item {
+		margin-bottom: 2rem;
 	}
 }
 
